# Telio

./: Cargo.toml  README.md  client.toml  flake.nix
src/: config.rs  main.rs
src/ui/: menus.rs  mod.rs  sphere.rs
