[package]
name = "radio-telescope-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
astronav = "0.2.5"
bevy_egui = "0.30"
bevy_panorbit_camera = "0.20"
chrono = "0.4"
rand = "0.8"
toml = "0.8"

[dependencies.bevy]
version = "0.14"
features = ["wayland"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
